@@ -1,6 +1,6 @@
 # "Make.test-chpsim"
 #	vi: ft=automake
-#	$Id: Make.test-chpsim,v 1.9 2007/06/15 06:01:54 fang Exp $
+#	$Id: Make.test-chpsim,v 1.9.2.1 2007/07/07 22:43:02 fang Exp $
 # This is just a portion of the Make.test-tail template included by
 # Makefile.am's in the test/ directory subtree.  
 # This depends on variables defined in Make.test-tail, and thus, 
@@ -335,8 +335,7 @@ srcdir_EXTRA_DIST += \
 
 # all alloc tests and prsimrc tests are candidates for prs-dot tests
 HACKT_CHPSIM_DOT_TEST_SUBJECTS =
-HACKT_CHPSIM_DOT_TEST_SUBJECTS += $(HACKT_CREATE_TEST_PASSES)
-# updated to ALLOC_TEST_PASSES now?
+HACKT_CHPSIM_DOT_TEST_SUBJECTS += $(HACKT_ALLOC_TEST_PASSES)
 # HACKT_CHPSIM_DOT_TEST_SUBJECTS += $(HACKT_CHPSIMRC_TEST_PASSES)
 
 TESTS += \
