@@ -1,0 +1,5 @@
+ERROR: complete type required for instantiation
+	have: foo<1>
+	instance: bar
+Error alloc_assign_subinstance_footprint_frame.
+ERROR in allocating.  Aborting.
