@@ -1,6 +1,63 @@
-Error: could not instantiate incomplete type (missing relaxed actuals)
-	with: foo<1>
-Error instantiating process footprint: 
-From canonical type: foo<1>
-Error encountered during module::unroll.
-ERROR in creating.  Aborting.
+
+Persistent Object Manager text dump: 
+	i	addr		type		arg	head	tail	size
+	0	##ADDR##	________	0	#HEAD#	#TAIL#	0
+	1	##ADDR##	module__	0	#HEAD#	#TAIL#	##SIZE##
+	2	##ADDR##	namespc_	0	#HEAD#	#TAIL#	72
+	3	##ADDR##	procplch	0	#HEAD#	#TAIL#	51
+	4	##ADDR##	procdefn	0	#HEAD#	#TAIL#	156
+	5	##ADDR##	pintplch	0	#HEAD#	#TAIL#	57
+	6	##ADDR##	pintinst	0	#HEAD#	#TAIL#	32
+	7	##ADDR##	pintplch	0	#HEAD#	#TAIL#	57
+	8	##ADDR##	pintinst	0	#HEAD#	#TAIL#	32
+	9	##ADDR##	procplch	0	#HEAD#	#TAIL#	51
+	10	##ADDR##	procplch	0	#HEAD#	#TAIL#	51
+	11	##ADDR##	procinst	0	#HEAD#	#TAIL#	40
+	12	##ADDR##	proctprf	0	#HEAD#	#TAIL#	40
+	13	##ADDR##	dprmlst_	0	#HEAD#	#TAIL#	32
+	14	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	24
+	15	##ADDR##	procinst	0	#HEAD#	#TAIL#	40
+	16	##ADDR##	procinst	0	#HEAD#	#TAIL#	40
+	17	##ADDR##	prcalias	0	#HEAD#	#TAIL#	40
+	18	##ADDR##	sprcmref	0	#HEAD#	#TAIL#	32
+	19	##ADDR##	sprcmref	0	#HEAD#	#TAIL#	32
+	20	##ADDR##	footprnt	0	#HEAD#	#TAIL#	668
+	21	##ADDR##	cprmlst_	0	#HEAD#	#TAIL#	32
+	22	##ADDR##	cprmlst_	0	#HEAD#	#TAIL#	32
+	23	##ADDR##	cprmlst_	0	#HEAD#	#TAIL#	32
+
+In module created from: ##FILE## (unrolled) (created)
+In namespace "", we have: {
+  0 parameter-collections
+  3 instantiation-collections
+  0 sub-namespaces
+  1 definitions
+  0 typedefs
+  Definitions:
+    foo = process-definition (declared) foo<
+      pint<> A
+      ><
+      pint<> B
+      >(
+      )
+      In definition "foo", we have: {
+      Parameters:
+        A = pint<> foo::A
+        B = pint<> foo::B
+      }
+
+  Instances:
+    bar = foo<1> bar
+    ick = foo<1> ick
+    poo = foo<1> poo
+}
+
+footprint: {
+  bar = process foo<1>^0 = bar (1) 
+  ick = process foo<1>^0 = bar (1) 
+  poo = process foo<1>^0 = poo (2) 
+  Created state:
+  process instance pool:
+  1	bar
+  2	poo
+}
