@@ -1,3 +1,79 @@
-ERROR: cannot unroll incomplete process type foo
-Error encountered during module::unroll.
-ERROR in creating.  Aborting.
+
+Persistent Object Manager text dump: 
+	i	addr		type		arg	head	tail	size
+	0	##ADDR##	________	0	#HEAD#	#TAIL#	0
+	1	##ADDR##	module__	0	#HEAD#	#TAIL#	##SIZE##
+	2	##ADDR##	namespc_	0	#HEAD#	#TAIL#	56
+	3	##ADDR##	procplch	0	#HEAD#	#TAIL#	51
+	4	##ADDR##	procdefn	0	#HEAD#	#TAIL#	156
+	5	##ADDR##	pintplch	0	#HEAD#	#TAIL#	57
+	6	##ADDR##	pintinst	0	#HEAD#	#TAIL#	32
+	7	##ADDR##	pintplch	0	#HEAD#	#TAIL#	57
+	8	##ADDR##	pintinst	0	#HEAD#	#TAIL#	32
+	9	##ADDR##	procinst	0	#HEAD#	#TAIL#	40
+	10	##ADDR##	proctprf	0	#HEAD#	#TAIL#	40
+	11	##ADDR##	dprmlst_	0	#HEAD#	#TAIL#	32
+	12	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	24
+	13	##ADDR##	crnglst_	0	#HEAD#	#TAIL#	40
+	14	##ADDR##	procinst	0	#HEAD#	#TAIL#	40
+	15	##ADDR##	proctprf	0	#HEAD#	#TAIL#	40
+	16	##ADDR##	dprmlst_	0	#HEAD#	#TAIL#	32
+	17	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	24
+	18	##ADDR##	crnglst_	0	#HEAD#	#TAIL#	40
+	19	##ADDR##	procinst	0	#HEAD#	#TAIL#	40
+	20	##ADDR##	proctprf	0	#HEAD#	#TAIL#	40
+	21	##ADDR##	dprmlst_	0	#HEAD#	#TAIL#	32
+	22	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	24
+	23	##ADDR##	crnglst_	0	#HEAD#	#TAIL#	40
+	24	##ADDR##	footprnt	0	#HEAD#	#TAIL#	952
+	25	##ADDR##	cprmlst_	0	#HEAD#	#TAIL#	32
+
+In module created from: ##FILE## (unrolled) (created)
+In namespace "", we have: {
+  0 parameter-collections
+  1 instantiation-collections
+  0 sub-namespaces
+  1 definitions
+  0 typedefs
+  Definitions:
+    foo = process-definition (declared) foo<
+      pint<> Q
+      ><
+      pint<> R
+      >(
+      )
+      In definition "foo", we have: {
+      Parameters:
+        Q = pint<> foo::Q
+        R = pint<> foo::R
+      }
+
+  Instances:
+    bar = foo<5> bar^1
+}
+
+footprint: {
+  bar = process foo<5>^1
+    {
+      [0] = bar[0] (1) 
+      [1] = bar[1] (2) 
+      [2] = bar[2] (3) 
+      [4] = bar[4] (4) 
+      [5] = bar[5] (5) 
+      [6] = bar[6] (6) 
+      [7] = bar[7] (7) 
+      [8] = bar[8] (8) 
+      [9] = bar[9] (9) 
+    }
+  Created state:
+  process instance pool:
+  1	bar[0]
+  2	bar[1]
+  3	bar[2]
+  4	bar[4]
+  5	bar[5]
+  6	bar[6]
+  7	bar[7]
+  8	bar[8]
+  9	bar[9]
+}
